Ayush | Fix image issue

--- a/crowdsource-ui/src/views/common/image-container/image.ejs
+++ b/crowdsource-ui/src/views/common/image-container/image.ejs
@@ -1,5 +1,5 @@
 <div class="row mx-0 mt-3">
     <div class="image-container col-12" style="border:1px dashed rgb(0,0,0,.2);padding:30px;border-radius:12px">
-        <img id="view-image" src="" alt="image" class="img-fluid w-100" height="100">
+        <img id="view-image" src="" alt="image" class="img-fluid">
     </div>
 </div>
