--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -160,7 +160,7 @@
             <div id="myModal" class="modal">
                 <div class="position-relative d-flex m-auto" style="width:80%;top:103px">
                     <span class="close-validate">&times;</span>
-                    <img class="modal-content" id="img01">
+                    <img class="modal-content" id="img01" height="150" style="width:100%">
                 </div>
             </div>
 
