| Priyanshu |add virtual keyboard btn on suno contribution page

--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -157,7 +157,27 @@
             </div>
 
         </div>
-
+        <div class="row my-3 p-3" style="justify-content:flex-end">
+            <button type="button" class="btn text-right layout-btn" id="virtualKeyBoardBtn" style="background-color:#e9ecef">
+                <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22.75 15.75H1.75C1.28587 15.75 0.840752 15.5656 0.512563 15.2374C0.184374 14.9092 0 14.4641 0 14V1.75C0 1.28587 0.184374 0.840752 0.512563 0.512563C0.840752 0.184375 1.28587 0 1.75 0H22.75C23.2141 0 23.6592 0.184375 23.9874 0.512563C24.3156 0.840752 24.5 1.28587 24.5 1.75V14C24.5 14.4641 24.3156 14.9092 23.9874 15.2374C23.6592 15.5656 23.2141 15.75 22.75 15.75ZM1.75 1.75V14H22.75V1.75H1.75Z" fill="black"/>
+                    <path d="M7 10.5H16.625V12.25H7V10.5Z" fill="black"/>
+                    <path d="M3.5 3.5H5.25V5.25H3.5V3.5Z" fill="black"/>
+                    <path d="M7 3.5H8.75V5.25H7V3.5Z" fill="black"/>
+                    <path d="M10.5 3.5H12.25V5.25H10.5V3.5Z" fill="black"/>
+                    <path d="M14 3.5H15.75V5.25H14V3.5Z" fill="black"/>
+                    <path d="M3.5 10.5H5.25V12.25H3.5V10.5Z" fill="black"/>
+                    <path d="M3.5 7H5.25V8.75H3.5V7Z" fill="black"/>
+                    <path d="M7 7H8.75V8.75H7V7Z" fill="black"/>
+                    <path d="M10.5 7H12.25V8.75H10.5V7Z" fill="black"/>
+                    <path d="M17.5 3.5H21V5.25H17.5V3.5Z" fill="black"/>
+                    <path d="M17.5 7H21V8.75H17.5V7Z" fill="black"/>
+                    <path d="M14 7H15.75V8.75H14V7Z" fill="black"/>
+                    <path d="M18.375 10.5H21V12.25H18.375V10.5Z" fill="black"/>
+                </svg>
+                virtual keyboard
+            </button>
+        </div>
         <%- include('../common/report.ejs',{"REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <%- include('../common/footer.ejs',{path:"../"}) %>
