| Priyanshu |add draggable keyboard and showVirtualKeyboard button on all functional pages

--- a/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
+++ b/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
@@ -1,1 +1,11 @@
-<div class="simple-keyboard"></div>
+<link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/virtualKeyboard.css">
+<div class="justify-content-center" id="keyboardBox">
+    <div style="width:560px">
+        <div id="keyboardBoxHeader" class="justify-content-between d-flex">
+            <div id="keyboardLayoutName">language name</div>
+            <div id="keyboardCloseBtn">X</div>
+        </div>
+        <div class="simple-keyboard d-none"></div>
+    </div>
+</div>
+<script src="../../js/common/virtualKeyboard.js"></script>
