--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/validator-prompt.css">
     <link rel="stylesheet" type="text/css" href="../../css/common.css">
     <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
 </head>
 
 <body>
@@ -160,11 +161,7 @@
                     <%= __('Skip') %>
                 </button>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-6 justify-content-center">
-                    <div class="simple-keyboard d-none"></div>
-                </div>
-            </div>
+            <%- include ../common/virtualKeyboard %>
             <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
                 <div class="col-12 col-sm-8 col-lg-7">
                     <div class="progress mt-1">
@@ -179,6 +176,9 @@
                 </div>
             </div>
 
+        </div>
+        <div class="row my-3 p-3" style="justify-content:flex-end">
+            <%- include ../common/virtualKeyboardBtn.ejs %>
         </div>
 
         <%- include('../common/report.ejs',{"REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
