--- a/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
+++ b/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
@@ -1,5 +1,5 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/virtualKeyboard.css">
-<div class="justify-content-center" id="keyboardBox">
+<div class="justify-content-center d-none" id="keyboardBox">
     <div style="width:560px">
         <div id="keyboardBoxHeader" class="justify-content-between d-flex">
             <div id="keyboardLayoutName">language name</div>
