--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -95,7 +95,7 @@
             </div>
 
             <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
-                <button class="btn align-self-start mb-2" id="cancel-edit-button">
+                <button class="btn align-self-start mb-2" id="cancel-edit-button" disabled="disabled">
                     <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
                         <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
