| Priyanshu |fix css of thankyou page

--- a/crowdsource-ui/src/views/common/sharableLinks/sharableLink.ejs
+++ b/crowdsource-ui/src/views/common/sharableLinks/sharableLink.ejs
@@ -1,4 +1,4 @@
-<div class="mt-5 text-center">
+<div class="mt-5 text-center mt-lg-0">
     <%= __('Share it with your friends and family') %>
 </div>
 <div class="row justify-content-center my-2">
