--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
@@ -35,10 +35,10 @@
         </h1>
     </div>
 
-    <div class="row mb-5 lazy">
+    <div class="row mb-5 lazy mb-lg-0">
         <%- include ../common/topLanguagesGraph.ejs %>
     </div>
-    <div class="row mt-5">
+    <div class="row mt-5 mt-lg-0">
         <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
             <div id="champion_text" class="champion-ribbon d-none">
                 <span class="marquee"><%= __('You are a champion') %></span>
