--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
@@ -30,7 +30,7 @@
         <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
     </div>
     <%- include ../common/thankyouPageHeading.ejs %>
-    <div class="row mb-5 lazy">
+    <div class="row mb-5 lazy mb-lg-0">
         <div class="col-lg-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
             <div class="row m-0">
                 <div class="col-2"></div>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
+    <div class="row mt-5 mt-lg-0">
         <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
             <div id="champion_text" class="champion-ribbon d-none">
                 <span class="marquee"><%= __('You are a champion') %></span>
