Ayush | Fix UI isssues and bar chart issue in thank you page

--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
@@ -42,7 +42,7 @@
                         <%= __('Your language and top 3 most contributed languages') %>
                     </h4>
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-6">
+                <div class="col-lg-6 col-md-9 col-sm-6 border-left">
                     <div id="bar_charts_container">
                         <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                             <div><span class="spinner"></span></div>
