--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
@@ -36,7 +36,25 @@
     </div>
 
     <div class="row mb-5 lazy mb-lg-0">
-        <%- include ../common/topLanguagesGraph.ejs %>
+        <div class="col-lg-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
+            <div class="row m-0">
+                <div class="col-2"></div>
+                <div class="col-lg-3 col-md-3 col-sm-6 pl-0">
+                    <h4 class="h4 my-3 font-weight-normal text-right">
+                        <%= __('Your language and top 3 most contributed languages') %>
+                    </h4>
+                </div>
+                <div class="col-lg-6 col-md-9 col-sm-6 border-left">
+                    <div id="bar_charts_container">
+                        <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
+                            <div><span class="spinner"></span></div>
+                        </div>
+                        <%- include ../common/horizontalBarGraph.ejs %>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
     </div>
     <div class="row mt-5 mt-lg-0">
         <div class="col-lg-8 offset-lg-2 border border-primary p-4-5 text-center overflow-hidden contribuion-info">
