--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -41,11 +41,11 @@
             <div class="row m-0">
                 <div class="col-2"></div>
                 <div class="col-lg-3 col-md-3 col-sm-6 pl-0">
-                    <h4 class="h4 mb-4">
+                    <h4 class="h4 my-3 font-weight-normal text-right">
                         <%= __('Your language and top 3 most contributed languages') %>
                     </h4>
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-6">
+                <div class="col-lg-6 col-md-9 col-sm-6 border-left">
                     <div id="bar_charts_container">
                         <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                             <div><span class="spinner"></span></div>
