--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
@@ -39,7 +39,7 @@
                         <%= __('Your language pair and top 3 most contributed language pairs') %>
                     </h4>
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-6">
+                <div class="col-lg-6 col-md-9 col-sm-6 border-left">
                     <div id="bar_charts_container">
                         <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                             <div><span class="spinner"></span></div>
