| Priyanshu |fix constrain to movement of virtual keyboard

--- a/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
+++ b/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
@@ -1,3 +1,4 @@
+<link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/virtualKeyboard.css">
 <div class="justify-content-center d-none" id="keyboardBox">
     <div style="width:560px">
@@ -8,4 +9,5 @@
         <div class="simple-keyboard d-none"></div>
     </div>
 </div>
+<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <script src="../../js/common/virtualKeyboard.js"></script>
