| Priyanshu |fix css of back button

--- a/crowdsource-ui/src/views/common/buttons/virtualKeyboardBtn/virtualKeyboardBtn.ejs
+++ b/crowdsource-ui/src/views/common/buttons/virtualKeyboardBtn/virtualKeyboardBtn.ejs
@@ -15,7 +15,7 @@
         <path d="M14 7H15.75V8.75H14V7Z" fill="black"/>
         <path d="M18.375 10.5H21V12.25H18.375V10.5Z" fill="black"/>
     </svg>
-    <%= __('virtual keyboard')%>
+    <%= __('Virtual keyboard')%>
 </button>
 
 <script src="../../js/common/virtualKeyboardBtn.js"></script>
