--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -37,11 +37,7 @@
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
                 <%- include ../common/speakerTesting.ejs %>
             </div>
-            <div class="row justify-content-center" id="instructive-msg">
-                <div class="col-12 justify-content-center text-center" style="color:#959595;font-style:italic">
-                    <%- __('Type the translation of the given text') %>
-                </div>
-            </div>
+            <%- include('../common/assistiveText.ejs',{msg:"Type the translation of the given text"}) %>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
                 <div class="col-lg-4 col-md-5 col-12 original-text">
                     <label id="from-label"><%- __('ENGLISH')%></label>
