| Priyanshu |add background image for ocr text container

--- a/crowdsource-ui/src/views/common/image-container/image.ejs
+++ b/crowdsource-ui/src/views/common/image-container/image.ejs
@@ -1,5 +1,6 @@
+<link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/dekhoImageBox.css">
 <div class="row mx-0 mt-3">
-    <div class="image-container col-12" style="border:1px dashed rgb(0,0,0,.2);padding:30px;border-radius:12px">
+    <div class="image-container col-12">
         <img id="view-image" src="" alt="image" class="img-fluid">
     </div>
 </div>
