| Priyanshu |replace 'correct' with 'validate' on functional pages

--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Suno India", PAGE_TITLE:"Correct"}) %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Suno India", PAGE_TITLE:"Validate"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
