--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -56,7 +56,7 @@
                 <div class="form-group green-border-focus col-lg-4 col-md-5 col-12 m-0" id="edit-text">
                     <label><%- __('Your Edit') %></label>
                     <div class="arrow-right"></div>
-                    <textarea class="form-control edit-area" id="edit" rows="3" style="resize:none"></textarea>
+                    <textarea class="form-control edit-area" id="edit" rows="3" maxlength="1000" style="resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center d-none" id="thankyou-text">
@@ -180,7 +180,6 @@
 
         <%- include('../common/report.ejs',{reportPara: "Help us understand what’s wrong with the sentence", "REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <%- include('../common/footer.ejs',{path:"../"}) %>
         <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
